--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ALT160 - A Place for Quirky Code</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .header {
+            background: url('banner-placeholder.jpg') no-repeat center center;
+            background-size: cover;
+            height: 250px;
+            width: 100%;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2em;
+        }
+        .content {
+            padding: 20px;
+        }
+        .footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        ALT160 - A Place for Quirky Code
+    </div>
+    <div class="content">
+        <h1>Welcome to ALT160!</h1>
+        <p>Here, you’ll find a collection of quirky and fun coding projects. From silly apps to unusual programming quirks, we aim to entertain and enlighten. Stay tuned for updates and more interesting content!</p>
+        
+        <h2>Weird (but True) Coincidence</h2>
+        <p>In early computing terminology, "2 bits" referred to 1/4 of a dollar, often used in the context of old arcade games or pricing in the past. Interestingly, in the world of digital data, "2 bits" also equals 1/4 of a byte. This charming coincidence highlights how some tech terms can have quirky overlaps with everyday language. It’s a small but fascinating example of how the world of technology intersects with the world of old-school lingo!</p>
+    </div>
+    <div class="footer">
+        &copy; 2024 ALT160. All rights reserved.
+    </div>
+</body>
+</html>
