--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         .header {
-            background: url('banner-placeholder.jpg') no-repeat center center;
+            background: url('https://github.com/alt160/alt160.github.io/raw/main/CFTH.webp') no-repeat center center;
             background-size: cover;
             height: 250px;
             width: 100%;
