--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <p>Here, you’ll find a collection of quirky and fun coding projects. From silly apps to unusual programming quirks, we aim to entertain and enlighten. Stay tuned for updates and more interesting content!</p>
         
         <h2>Weird (but True) Coincidence</h2>
-        <p>In early computing terminology, "2 bits" referred to 1/4 of a dollar, often used in the context of old arcade games or pricing in the past. Interestingly, in the world of digital data, "2 bits" also equals 1/4 of a byte. This charming coincidence highlights how some tech terms can have quirky overlaps with everyday language. It’s a small but fascinating example of how the world of technology intersects with the world of old-school lingo!</p>
+       <p>The term <strong>"2 bits"</strong> has an interesting history beyond its technical use. Historically, "bit" comes from the word <strong>"binary digit,"</strong> but in the context of currency, <strong>"2 bits"</strong> was a colloquial term used to describe a quarter of a dollar, or 25 cents. This usage dates back to the Spanish colonial period in the Americas when Spanish coins, known as <strong>"pieces of eight,"</strong> were commonly used. One of these coins was worth 8 reales, and thus a <strong>"bit"</strong> referred to one-eighth of a dollar. Consequently, <strong>"2 bits"</strong> equaled one-quarter of a dollar.</p>
+        <p>Interestingly, in digital computing, <strong>"2 bits"</strong> is also exactly 1/4 of a byte, since a byte consists of 8 bits. This parallel between historical monetary terminology and modern digital data is a fascinating overlap, showing how a term can bridge the gap between past and present in surprising ways.</p>
     </div>
     <div class="footer">
         &copy; 2024 ALT160. All rights reserved.
