--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
             align-items: center;
             justify-content: center;
             font-size: 2em;
+            position: relative;
+            /* Adding a semi-transparent background to improve text readability */
+            background: rgba(0, 0, 0, 0.5);
+        }
+        .header h1 {
+            margin: 0;
+            padding: 0 20px;
+            /* Adding a text shadow to make text stand out */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            /* Adding a border to further enhance text visibility */
+            border: 2px solid rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            background: rgba(0, 0, 0, 0.3); /* Optional: semi-transparent background behind text */
         }
         .content {
             padding: 20px;
@@ -39,15 +52,11 @@
 </head>
 <body>
     <div class="header">
-        ALT160 - A Place for Quirky Code
+        <h1>ALT160 - A Place for Quirky Code</h1>
     </div>
     <div class="content">
         <h1>Welcome to ALT160!</h1>
-        <p>Here, you’ll find a collection of quirky and fun coding projects. From silly apps to unusual programming quirks, we aim to entertain and enlighten. Stay tuned for updates and more interesting content!</p>
-        
-        <h2>Weird (but True) Coincidence</h2>
-       <p>The term <strong>"2 bits"</strong> has an interesting history beyond its technical use. Historically, "bit" comes from the word <strong>"binary digit,"</strong> but in the context of currency, <strong>"2 bits"</strong> was a colloquial term used to describe a quarter of a dollar, or 25 cents. This usage dates back to the Spanish colonial period in the Americas when Spanish coins, known as <strong>"pieces of eight,"</strong> were commonly used. One of these coins was worth 8 reales, and thus a <strong>"bit"</strong> referred to one-eighth of a dollar. Consequently, <strong>"2 bits"</strong> equaled one-quarter of a dollar.</p>
-        <p>Interestingly, in digital computing, <strong>"2 bits"</strong> is also exactly 1/4 of a byte, since a byte consists of 8 bits. This parallel between historical monetary terminology and modern digital data is a fascinating overlap, showing how a term can bridge the gap between past and present in surprising ways.</p>
+        <p>Here, you’ll find a...</p>
     </div>
     <div class="footer">
         &copy; 2024 ALT160. All rights reserved.
