--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
             justify-content: center;
             font-size: 2em;
             position: relative;
-            /* Adding a semi-transparent background to improve text readability */
-            background: rgba(0, 0, 0, 0.5);
         }
         .header h1 {
             margin: 0;
             padding: 0 20px;
-            /* Adding a text shadow to make text stand out */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            /* Adding a border to further enhance text visibility */
-            border: 2px solid rgba(0, 0, 0, 0.5);
+            /* Adding a semi-transparent background to improve text readability */
+            background: rgba(0, 0, 0, 0.5);
             border-radius: 5px;
-            background: rgba(0, 0, 0, 0.3); /* Optional: semi-transparent background behind text */
+            /* Adding a text shadow to make the text stand out */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         .content {
             padding: 20px;
@@ -56,10 +53,11 @@
     </div>
     <div class="content">
         <h1>Welcome to ALT160!</h1>
-        <p>Here, you’ll find a...</p>
+        <p>The term <strong>"2 bits"</strong> has an interesting history beyond its technical use. Historically, "bit" comes from the word <strong>"binary digit,"</strong> but in the context of currency, <strong>"2 bits"</strong> was a colloquial term used to describe a quarter of a dollar, or 25 cents. This usage dates back to the Spanish colonial period in the Americas when Spanish coins, known as <strong>"pieces of eight,"</strong> were commonly used. One of these coins was worth 8 reales, and thus a <strong>"bit"</strong> referred to one-eighth of a dollar. Consequently, <strong>"2 bits"</strong> equaled one-quarter of a dollar.</p>
+        <p>Interestingly, in digital computing, <strong>"2 bits"</strong> is also exactly 1/4 of a byte, since a byte consists of 8 bits. This parallel between historical monetary terminology and modern digital data is a fascinating overlap, showing how a term can bridge the gap between past and present in surprising ways.</p>
     </div>
     <div class="footer">
-        &copy; 2024 ALT160. All rights reserved.
+        &copy; 2024 ALT160
     </div>
 </body>
 </html>
