--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALT160 - A Place for Quirky Code</title>
+    <title>ALT160 - An unbreakable space for broken code.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>ALT160 - A Place for Quirky Code</h1>
+        <h1>ALT160 - An unbreakable space for broken code</h1>
     </div>
     <div class="content">
         <h1>Welcome to ALT160!</h1>
