--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALT160 - An unbreakable space for broken code.</title>
+    <title>ALT160 - An unbreakable space for broken code</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,6 +34,11 @@
             /* Adding a text shadow to make the text stand out */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
         .content {
             padding: 20px;
         }
@@ -51,10 +56,12 @@
     <div class="header">
         <h1>ALT160 - An unbreakable space for broken code</h1>
     </div>
-    <div class="content">
-        <h1>Welcome to ALT160!</h1>
-        <p>The term <strong>"2 bits"</strong> has an interesting history beyond its technical use. Historically, "bit" comes from the word <strong>"binary digit,"</strong> but in the context of currency, <strong>"2 bits"</strong> was a colloquial term used to describe a quarter of a dollar, or 25 cents. This usage dates back to the Spanish colonial period in the Americas when Spanish coins, known as <strong>"pieces of eight,"</strong> were commonly used. One of these coins was worth 8 reales, and thus a <strong>"bit"</strong> referred to one-eighth of a dollar. Consequently, <strong>"2 bits"</strong> equaled one-quarter of a dollar.</p>
-        <p>Interestingly, in digital computing, <strong>"2 bits"</strong> is also exactly 1/4 of a byte, since a byte consists of 8 bits. This parallel between historical monetary terminology and modern digital data is a fascinating overlap, showing how a term can bridge the gap between past and present in surprising ways.</p>
+    <div class="container">
+        <div class="content">
+            <h1>Welcome to ALT160!</h1>
+            <p>The term <strong>"2 bits"</strong> has an interesting history beyond its technical use. Historically, "bit" comes from the word <strong>"binary digit,"</strong> but in the context of currency, <strong>"2 bits"</strong> was a colloquial term used to describe a quarter of a dollar, or 25 cents. This usage dates back to the Spanish colonial period in the Americas when Spanish coins, known as <strong>"pieces of eight,"</strong> were commonly used. One of these coins was worth 8 reales, and thus a <strong>"bit"</strong> referred to one-eighth of a dollar. Consequently, <strong>"2 bits"</strong> equaled one-quarter of a dollar.</p>
+            <p>Interestingly, in digital computing, <strong>"2 bits"</strong> is also exactly 1/4 of a byte, since a byte consists of 8 bits. This parallel between historical monetary terminology and modern digital data is a fascinating overlap, showing how a term can bridge the gap between past and present in surprising ways.</p>
+        </div>
     </div>
     <div class="footer">
         &copy; 2024 ALT160
